<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg">

    <com.nan.appstore.widget.AppToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:leftButtonIcon="@drawable/common_toobar_icon_avatar_with_bg"
        app:myTitle="@string/tab_mine"
        app:rightButtonIcon="@drawable/slide_bottom_setting"
        app:showSearchView="false" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical">


            <RelativeLayout
                android:id="@+id/rl_header"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:background="@color/green"
                android:visibility="visible">

                <ImageView
                    android:id="@+id/iv_blur"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop" />


                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_avatar"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/common_toobar_icon_avatar_with_bg"
                    app:civ_border_color="@color/white"
                    app:civ_border_width="2dp" />


                <ImageView
                    android:id="@+id/iv_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/iv_avatar"
                    android:layout_alignRight="@+id/iv_avatar"
                    android:layout_margin="3dp"
                    android:src="@drawable/icon_boy" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/iv_avatar"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_school"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="3dp"
                        android:lines="1"
                        android:shadowColor="#000"
                        android:shadowDx="1"
                        android:shadowDy="1"
                        android:shadowRadius="2"
                        android:text="@string/not_set_name"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="0dp"
                        android:ellipsize="end"
                        android:shadowColor="#000"
                        android:shadowDx="1"
                        android:shadowDy="1"
                        android:shadowRadius="2"
                        android:singleLine="true"
                        android:text=""
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                </LinearLayout>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <ImageView
                        android:layout_width="@dimen/ic_size_setting"
                        android:layout_height="@dimen/ic_size_setting"
                        android:src="@drawable/manage_download_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/manage_download"
                        android:textColor="@color/title"
                        android:textSize="@dimen/txt_size_setting" />

                </LinearLayout>


                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.01" />


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <ImageView
                        android:layout_width="@dimen/ic_size_setting"
                        android:layout_height="@dimen/ic_size_setting"
                        android:src="@drawable/manage_tools_clear" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/manage_tools_clear"
                        android:textColor="@color/title"
                        android:textSize="@dimen/txt_size_setting" />

                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.01" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="@dimen/ic_size_setting"
                        android:layout_height="@dimen/ic_size_setting"
                        android:src="@drawable/manage_tools_freeze" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/manage_tools_freeze"
                        android:textColor="@color/title"
                        android:textSize="@dimen/txt_size_setting" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <ImageView
                        android:layout_width="@dimen/ic_size_setting"
                        android:layout_height="@dimen/ic_size_setting"
                        android:src="@drawable/manage_tools_battery" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/manage_tools_battery"
                        android:textColor="@color/title"
                        android:textSize="@dimen/txt_size_setting" />

                </LinearLayout>


                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.01" />


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <ImageView
                        android:layout_width="@dimen/ic_size_setting"
                        android:layout_height="@dimen/ic_size_setting"
                        android:src="@drawable/manage_receive_file_inco" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/manage_receive_file_inco"
                        android:textColor="@color/title"
                        android:textSize="@dimen/txt_size_setting" />

                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.01" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <ImageView
                        android:layout_width="@dimen/ic_size_setting"
                        android:layout_height="@dimen/ic_size_setting"
                        android:src="@drawable/manage_uninstall_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/manage_uninstall_icon"
                        android:textColor="@color/title"
                        android:textSize="@dimen/txt_size_setting" />

                </LinearLayout>

            </LinearLayout>


            <RelativeLayout
                android:id="@+id/rl_update"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:drawableLeft="@drawable/ic_updates"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:text="@string/updates"
                    android:textColor="@color/title"
                    android:textSize="16sp" />


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:gravity="center_vertical"
                    android:src="@drawable/clean_float_input"
                    android:textSize="18sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="@dimen/line_mar"
                    android:layout_marginRight="@dimen/line_mar"
                    android:background="@color/item_divider" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_about"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@color/white"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:drawableLeft="@drawable/ic_about"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:text="@string/about"
                    android:textColor="@color/title"
                    android:textSize="16sp" />


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:gravity="center_vertical"
                    android:src="@drawable/clean_float_input"
                    android:textSize="18sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="@dimen/line_mar"
                    android:layout_marginRight="@dimen/line_mar"
                    android:background="@color/item_divider" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_exit"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@color/white"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:drawableLeft="@drawable/ic_exit"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:text="@string/exit"
                    android:textColor="@color/title"
                    android:textSize="16sp" />


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:gravity="center_vertical"
                    android:src="@drawable/clean_float_input"
                    android:textSize="18sp" />

            </RelativeLayout>

        </LinearLayout>


    </ScrollView>


    <LinearLayout
        android:id="@+id/ll_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:layout_centerInParent="true"
        android:visibility="gone">

        <include layout="@layout/v_loading" />

    </LinearLayout>

</RelativeLayout>