<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.nan.appstore.widget.AppToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:leftButtonIcon="@drawable/common_toobar_icon_back"
        app:showSearchView="false" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:paddingBottom="0dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingTop="10dp">

                    <RelativeLayout
                        android:id="@+id/item_top"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RelativeLayout
                            android:id="@+id/rl_icon"
                            android:layout_width="65dp"
                            android:layout_height="60dp"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="15dp">

                            <ImageView
                                android:id="@+id/iv_icon"
                                android:layout_width="60dp"
                                android:layout_height="60dp"
                                android:scaleType="fitXY"
                                android:src="@drawable/ic_default" />

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentBottom="true"
                                android:layout_alignParentRight="true"
                                android:background="@drawable/safelogobig"
                                android:text="@string/official"
                                android:textColor="@color/white" />

                        </RelativeLayout>


                        <RelativeLayout
                            android:id="@+id/item_content"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_toRightOf="@id/rl_icon">

                            <TextView
                                android:id="@+id/tv_title"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ellipsize="end"
                                android:singleLine="true"
                                android:text="标题"
                                android:textColor="@color/title"
                                android:textSize="17sp" />

                            <RatingBar
                                android:id="@+id/rb_rating"
                                android:layout_width="wrap_content"
                                android:layout_height="@dimen/list_item_rating_height"
                                android:layout_below="@id/tv_title"
                                android:layout_marginTop="@dimen/app_detail_rating_margin"
                                android:isIndicator="true"
                                android:progressDrawable="@drawable/ratingbar_small"
                                android:rating="2.5" />

                            <TextView
                                android:id="@+id/tv_download"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/rb_rating"
                                android:layout_weight="1"
                                android:ellipsize="end"
                                android:lines="1"
                                android:text="324万人在用"
                                android:textColor="#ff7a7a7a"
                                android:textSize="@dimen/text_default_size" />

                            <TextView
                                android:id="@+id/tv_size"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignBaseline="@id/tv_download"
                                android:layout_marginLeft="10dp"
                                android:layout_toRightOf="@id/tv_download"
                                android:layout_weight="1"
                                android:ellipsize="end"
                                android:singleLine="true"
                                android:text="12.34M"
                                android:textColor="@color/green"
                                android:textSize="@dimen/text_default_size" />

                        </RelativeLayout>
                    </RelativeLayout>

                    <LinearLayout
                        android:id="@+id/ll_info"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/item_top"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tv_version"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:ellipsize="end"
                                android:singleLine="true"
                                android:textColor="#ff7a7a7a"
                                android:textSize="@dimen/text_default_size" />

                            <TextView
                                android:id="@+id/tv_date"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:ellipsize="end"
                                android:singleLine="true"
                                android:textColor="#ff7a7a7a"
                                android:textSize="@dimen/text_default_size" />
                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_safe"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/ll_info"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/iv_safe_0"
                            android:layout_width="@dimen/safe_w"
                            android:layout_height="@dimen/safe_h"
                            android:visibility="gone" />

                        <ImageView
                            android:id="@+id/iv_safe_1"
                            android:layout_width="@dimen/safe_w"
                            android:layout_height="@dimen/safe_h"
                            android:layout_marginLeft="10dp"
                            android:visibility="gone" />

                        <ImageView
                            android:id="@+id/iv_safe_2"
                            android:layout_width="@dimen/safe_w"
                            android:layout_height="@dimen/safe_h"
                            android:layout_marginLeft="10dp"
                            android:visibility="gone" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/ll_safe"
                        android:layout_marginTop="10dp"
                        android:orientation="vertical">

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/rv_screen"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/detail"
                            android:textColor="@color/green"
                            android:textSize="@dimen/text_default_size" />

                        <me.chensir.expandabletextview.ExpandableTextView
                            android:id="@+id/etv_content"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            app:DrawableAndTextGravity="center"
                            app:collapseDrawable="@drawable/ic_expand_less"
                            app:contentTextColor="@color/title"
                            app:contentTextSize="8sp"
                            app:expandDrawable="@drawable/ic_expand_more"
                            app:maxCollapsedLines="2" />


                    </LinearLayout>


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/white"
                    android:padding="15dp">

                    <ImageView
                        android:id="@+id/iv_red"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/app_info_package_icon" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@id/iv_red"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_app_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="我是标题"
                            android:textColor="@color/title"
                            android:textSize="17sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_weight="1"
                            android:ellipsize="end"
                            android:lines="1"
                            android:text="@string/red_paper"
                            android:textColor="#ff7a7a7a"
                            android:textSize="@dimen/text_default_size" />

                    </LinearLayout>

                    <Button
                        android:layout_width="65dp"
                        android:layout_height="30dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/shape_bg_red"
                        android:gravity="center"
                        android:text="@string/watch"
                        android:textColor="@color/white"
                        android:textSize="17sp" />

                </RelativeLayout>

            </LinearLayout>
        </ScrollView>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/bottom_shadow" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/white"
            android:paddingBottom="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="10dp">

            <ImageView
                android:id="@+id/iv_fav"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:src="@drawable/app_focus" />

            <ImageView
                android:id="@+id/iv_share"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/app_share" />

            <com.xiaochen.progressroundbutton.AnimDownloadProgressButton
                android:id="@+id/btn_progress"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@id/iv_share"
                android:layout_toRightOf="@id/iv_fav"
                app:progressbtn_backgroud_color="@color/green"
                app:progressbtn_backgroud_second_color="@color/green_alpha"
                app:progressbtn_enable_press="true"
                app:progressbtn_text_color="@color/white"
                app:progressbtn_text_covercolor="@color/white" />


        </RelativeLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:layout_centerInParent="true"
        android:visibility="gone">

        <include layout="@layout/v_loading" />

    </LinearLayout>

</RelativeLayout>
